refactor: 💡 Untangle some styles, split out some files
BREAKING CHANGE: 🧨 Placements of the stylus files has now changed!

✅ Closes: #29

--- a/src/features/mark/styles/index.styl
+++ b/src/features/mark/styles/index.styl
@@ -1,6 +1,6 @@
 .ph-speccer.speccer.mark
   background-color var(--ph-speccer-mark-background-color)
   border-color var(--ph-speccer-mark-border-color)
-  border-width 1px
-  border-style solid
+  border-width var(--ph-speccer-mark-border-width)
+  border-style var(--ph-speccer-mark-border-style)
   position absolute
