--- a/src/features/a11y/styles/index.styl
+++ b/src/features/a11y/styles/index.styl
@@ -1,117 +1,4 @@
-[data-speccer-a11y]
-  counter-reset speccer-a11y-tabstops
-
-
-.ph-speccer.speccer.a11y.tabstops
-  position absolute
-  height 48px
-  width 48px
-  background-color var(--ph-speccer-a11y-color-background)
-  border-radius 0.5rem
-  color var(--ph-speccer-color-text-light)
-  font-family var(--ph-speccer-font-family)
-  counter-increment speccer-a11y-tabstops
-  border 3px solid var(--ph-speccer-a11y-color-background)
-
-  &::before
-    position absolute
-    top calc(0.5rem - 2px)
-    left calc(0.5rem - 2px)
-    content counter(speccer-a11y-tabstops)
-    font-size 12px
-    text-align left
-
-  &::after
-    display flex
-    justify-content flex-end
-    align-items flex-end
-    position absolute
-    left 0.5rem
-    right 0.5rem
-    bottom 0.5rem
-    height 2rem
-    content "⇥"
-    font-size 2rem
-    color var(--ph-speccer-color-text-light)
-    font-family var(--ph-speccer-font-family)
-
-
-.ph-speccer.speccer.a11y.landmark
-  position absolute
-  height 48px
-  width 48px
-  background-color var(--ph-speccer-a11y-landmark-color-background)
-  border-radius 0.5rem
-  color var(--ph-speccer-color-text-light)
-  font-family var(--ph-speccer-font-family)
-  border 3px solid var(--ph-speccer-a11y-landmark-color-background)
-  box-shadow inset 0 0 0 2px var(--ph-speccer-color-text-light)
-  justify-content center
-  font-size 1rem
-  line-height 100%
-  align-items center
-  padding 0.5rem
-  pointer-events auto
-
-  &::after
-    top 100%
-    left 50%
-    border solid transparent
-    content ""
-    height 0
-    width 0
-    position absolute
-    pointer-events none
-    border-color rgba(126, 96, 197, 0)
-    border-top-color var(--ph-speccer-a11y-landmark-color-background)
-    border-width 12px
-    margin-left -12px
-
-
-.ph-speccer.speccer.a11y.region
-  position absolute
-  outline 2px solid var(--ph-speccer-a11y-landmark-color-background)
-  outline-offset 2px
-
-
-.ph-speccer.speccer.a11y.shortcut-holder
-  position absolute
-  height 48px
-  min-width 120px
-  display flex
-  flex-direction row
-  justify-content flex-start
-  align-items center
-  grid-gap 0.5rem
-
-  & kbd.ph-speccer.speccer.a11y.shortcut
-    flex-shrink 0
-    position relative
-    background-color var(--ph-speccer-a11y-color-background)
-    border-radius 0.5rem
-    color var(--ph-speccer-color-text-light)
-    font-family var(--ph-speccer-font-family)
-    display inline-flex
-    text-transform uppercase
-    height 48px
-    border 3px solid var(--ph-speccer-a11y-color-background)
-    min-width 48px
-    font-size 1.5rem
-    justify-content center
-    align-items center
-
-    &.modifier
-      justify-content flex-start
-      align-items flex-end
-      padding 0.25rem
-      font-size 1rem
-      width 80px
-      text-transform lowercase
-
-    &.physical
-      justify-content flex-start
-      align-items flex-end
-      padding 0.25rem
-      font-size 1rem
-      text-transform lowercase
-
+@require './landmark.styl'
+@require './region.styl'
+@require './tabstops.styl'
+@require './shortcut-holder.styl'
