--- a/src/styles/variables.styl
+++ b/src/styles/variables.styl
@@ -24,6 +24,8 @@
     --ph-speccer-typography-color-value: var(--ph-speccer-base-color);
     --ph-speccer-mark-background-color: rgb(from var(--ph-speccer-base-color) r g b / var(--ph-speccer-opacity-20));
     --ph-speccer-mark-border-color: var(--ph-speccer-base-color);
+    --ph-speccer-mark-border-width: 1px;
+    --ph-speccer-mark-border-style: solid;
     --ph-speccer-measure-color: var(--ph-speccer-color-red);
     --ph-speccer-measure-size: 8px;
     --ph-speccer-a11y-color-bakground: var(--ph-speccer-color-beautifulBlue);
