feat: 🎸 Add new default measure feature, keep old as `slim`

--- a/src/features/measure/styles/subtle.styl
+++ b/src/features/measure/styles/subtle.styl
@@ -1,5 +1,5 @@
 
-.ph-speccer.speccer.measure
+.ph-speccer.speccer.measure.slim
   &.subtle
     &.width.top,
     &.width.bottom,
@@ -7,22 +7,22 @@
     &.height.left
       border-style dashed
 
-.ph-speccer.speccer.measure
+.ph-speccer.speccer.measure.slim
   &.subtle
     &.width.top
       border-bottom none
 
-.ph-speccer.speccer.measure
+.ph-speccer.speccer.measure.slim
   &.subtle
     &.width.bottom
       border-top none
 
-.ph-speccer.speccer.measure
+.ph-speccer.speccer.measure.slim
   &.subtle
     &.height.right
       border-left none
 
-.ph-speccer.speccer.measure
+.ph-speccer.speccer.measure.slim
   &.subtle
     &.height.left
       border-right none
