--- a/src/styles/variables.styl
+++ b/src/styles/variables.styl
@@ -27,6 +27,8 @@
     --ph-speccer-mark-border-width: 1px;
     --ph-speccer-mark-border-style: solid;
     --ph-speccer-measure-color: var(--ph-speccer-color-red);
+    --ph-speccer-measure-line-width: 1.5px;
+    --ph-speccer-measure-border-style: dotted;
     --ph-speccer-measure-size: 8px;
     --ph-speccer-a11y-color-background: var(--ph-speccer-color-beautifulBlue);
     --ph-speccer-a11y-landmark-color-background: var(--ph-speccer-color-fuchsiaBlue);
