fix: 🐛 Use correct variable for height calculation

--- a/src/features/grid/styles/index.styl
+++ b/src/features/grid/styles/index.styl
@@ -65,7 +65,7 @@ basePinGrid()
     left -32px
     top 100%;
     width 32px
-    height calc(var(--ph-speccer-grid-gap) + 2px)
+    height calc(var(--ph-speccer-grid-row-gap) + 2px)
     border-top-left-radius 50%
     border-bottom-left-radius 50%
 
@@ -89,7 +89,7 @@ basePinGrid()
     left -32px
     top 100%;
     width 32px
-    height calc(var(--ph-speccer-grid-gap) + 2px)
+    height calc(var(--ph-speccer-grid-row-gap) + 2px)
     border-top-left-radius 50%
     border-bottom-left-radius 50%
 
