fix: 🐛 Add missing style overrides

--- a/src/features/pin/styles/pin.styl
+++ b/src/features/pin/styles/pin.styl
@@ -1,5 +1,5 @@
 .ph-speccer.speccer.pin
-  font-family sans-serif
+  font-family var(--ph-speccer-font-family)
   height var(--ph-speccer-pin-size)
   width var(--ph-speccer-pin-size)
   display flex
