--- a/src/features/typography/styles/syntax.styl
+++ b/src/features/typography/styles/syntax.styl
@@ -2,6 +2,13 @@
   &.syntax
     & > pre
       margin 0
+      padding 0
+      font-size 12px
+      line-height 1.5
+      font-family var(--ph-speccer-font-family)
+      color var(--ph-speccer-color-text-light)
+      background transparent
+      border-radius 0
 
 .ph-speccer.speccer.typography.syntax
   --ph-speccer-color-code-color-1 #737373
