feat: 🎸 Add and update a11y features

--- a/src/features/a11y/styles/headings.styl
+++ b/src/features/a11y/styles/headings.styl
@@ -1,6 +1,6 @@
-.ph-speccer.speccer.a11y.landmark
+.ph-speccer.speccer.a11y.headings
   position absolute
-  background-color var(--ph-speccer-a11y-landmark-color-background)
+  background-color var(--ph-speccer-a11y-headings-color-background)
   color var(--ph-speccer-color-text-light)
   font-family var(--ph-speccer-font-family)
   justify-content center
@@ -11,7 +11,7 @@
   padding 0 0.5rem
   pointer-events auto
 
-.ph-speccer.speccer.a11y.landmark
+.ph-speccer.speccer.a11y.headings
   &::after
     border solid transparent
     content ""
@@ -23,31 +23,31 @@
     border-width 14.2px
 
 
-.ph-speccer.speccer.a11y.landmark,
-.ph-speccer.speccer.a11y.landmark.left
+.ph-speccer.speccer.a11y.headings,
+.ph-speccer.speccer.a11y.headings.left
   &::after
     top 50%
     left 100%
-    border-left-color var(--ph-speccer-a11y-landmark-color-background)
+    border-left-color var(--ph-speccer-a11y-headings-color-background)
     transform translateY(-50%)
 
-.ph-speccer.speccer.a11y.landmark.top
+.ph-speccer.speccer.a11y.headings.top
   &::after
     top 0%
     left 50%
-    border-bottom-color var(--ph-speccer-a11y-landmark-color-background)
+    border-bottom-color var(--ph-speccer-a11y-headings-color-background)
     transform translateX(-50%)
 
-.ph-speccer.speccer.a11y.landmark.right
+.ph-speccer.speccer.a11y.headings.right
   &::after
     top 50%
     left 0%
-    border-right-color var(--ph-speccer-a11y-landmark-color-background)
+    border-right-color var(--ph-speccer-a11y-headings-color-background)
     transform translateY(-50%)
 
-.ph-speccer.speccer.a11y.landmark.bottom
+.ph-speccer.speccer.a11y.headings.bottom
   &::after
     top 0%
     left 50%
-    border-top-color var(--ph-speccer-a11y-landmark-color-background)
+    border-top-color var(--ph-speccer-a11y-headings-color-background)
     transform translateX(-50%)
