--- a/src/features/a11y/styles/index.styl
+++ b/src/features/a11y/styles/index.styl
@@ -2,3 +2,5 @@
 @require './region.styl'
 @require './tabstops.styl'
 @require './shortcut-holder.styl'
+@require './autocomplete.styl'
+@require './headings.styl'
