--- a/src/styles/variables.styl
+++ b/src/styles/variables.styl
@@ -8,6 +8,8 @@
   --ph-speccer-color-niuZaiSeDenim: #0074e8;
   --ph-speccer-color-beautifulBlue: #1868b2;
   --ph-speccer-color-fuchsiaBlue: #7e60c5;
+  --ph-speccer-color-sangDeBoeuf: #7a1000;
+  --ph-speccer-color-galacticPurple: #3f2f9b;
 }
 
 @css{
@@ -33,6 +35,8 @@
     --ph-speccer-measure-size: 8px;
     --ph-speccer-a11y-color-background: var(--ph-speccer-color-beautifulBlue);
     --ph-speccer-a11y-landmark-color-background: var(--ph-speccer-color-fuchsiaBlue);
+    --ph-speccer-a11y-autocomplete-color-background: var(--ph-speccer-color-sangDeBoeuf);
+    --ph-speccer-a11y-headings-color-background: var(--ph-speccer-color-galacticPurple);
     --ph-speccer-color-text-light: var(--ph-speccer-color-white);
     --ph-speccer-color-text-dark: var(--ph-speccer-color-carbon);
     --ph-speccer-pin-color: var(--ph-speccer-base-color);
