--- a/src/features/a11y/styles/autocomplete.styl
+++ b/src/features/a11y/styles/autocomplete.styl
@@ -1,6 +1,6 @@
-.ph-speccer.speccer.a11y.landmark
+.ph-speccer.speccer.a11y.autocomplete
   position absolute
-  background-color var(--ph-speccer-a11y-landmark-color-background)
+  background-color var(--ph-speccer-a11y-autocomplete-color-background)
   color var(--ph-speccer-color-text-light)
   font-family var(--ph-speccer-font-family)
   justify-content center
@@ -11,7 +11,7 @@
   padding 0 0.5rem
   pointer-events auto
 
-.ph-speccer.speccer.a11y.landmark
+.ph-speccer.speccer.a11y.autocomplete
   &::after
     border solid transparent
     content ""
@@ -23,31 +23,31 @@
     border-width 14.2px
 
 
-.ph-speccer.speccer.a11y.landmark,
-.ph-speccer.speccer.a11y.landmark.left
+.ph-speccer.speccer.a11y.autocomplete,
+.ph-speccer.speccer.a11y.autocomplete.left
   &::after
     top 50%
     left 100%
-    border-left-color var(--ph-speccer-a11y-landmark-color-background)
+    border-left-color var(--ph-speccer-a11y-autocomplete-color-background)
     transform translateY(-50%)
 
-.ph-speccer.speccer.a11y.landmark.top
+.ph-speccer.speccer.a11y.autocomplete.top
   &::after
     top 0%
     left 50%
-    border-bottom-color var(--ph-speccer-a11y-landmark-color-background)
+    border-bottom-color var(--ph-speccer-a11y-autocomplete-color-background)
     transform translateX(-50%)
 
-.ph-speccer.speccer.a11y.landmark.right
+.ph-speccer.speccer.a11y.autocomplete.right
   &::after
     top 50%
     left 0%
-    border-right-color var(--ph-speccer-a11y-landmark-color-background)
+    border-right-color var(--ph-speccer-a11y-autocomplete-color-background)
     transform translateY(-50%)
 
-.ph-speccer.speccer.a11y.landmark.bottom
+.ph-speccer.speccer.a11y.autocomplete.bottom
   &::after
     top 0%
     left 50%
-    border-top-color var(--ph-speccer-a11y-landmark-color-background)
+    border-top-color var(--ph-speccer-a11y-autocomplete-color-background)
     transform translateX(-50%)
