--- a/src/features/a11y/styles/shortcut-holder.styl
+++ b/src/features/a11y/styles/shortcut-holder.styl
@@ -1,6 +1,5 @@
 .ph-speccer.speccer.a11y.shortcut-holder
   position absolute
-  height 48px
   min-width 120px
   display flex
   flex-direction row
@@ -18,29 +17,13 @@
     font-family var(--ph-speccer-font-family)
     display inline-flex
     text-transform uppercase
-    height 48px
-    border 3px solid var(--ph-speccer-a11y-color-background)
-    min-width 48px
-    font-size 1.5rem
+    border 1pt solid var(--ph-speccer-a11y-color-background)
+    font-size 0.875rem
+    font-weight 500
+    line-height 1.25rem
     justify-content center
     align-items center
+    padding 0.5rem 0.75rem
+    text-transform lowercase
 
-.ph-speccer.speccer.a11y.shortcut-holder
-  & kbd.ph-speccer.speccer.a11y.shortcut
-    &.modifier
-      justify-content flex-start
-      align-items flex-end
-      padding 0.25rem
-      font-size 1rem
-      width 80px
-      text-transform lowercase
-
-.ph-speccer.speccer.a11y.shortcut-holder
-  & kbd.ph-speccer.speccer.a11y.shortcut
-    &.physical
-      justify-content flex-start
-      align-items flex-end
-      padding 0.25rem
-      font-size 1rem
-      text-transform lowercase
 
