--- a/docs/.vitepress/theme/custom.css
+++ b/docs/.vitepress/theme/custom.css
@@ -212,7 +212,8 @@ html.ph body {
     background-color: var(--ph-color-background-notice-note);
   }
 
-  &.error {
+  &.error,
+  &.danger {
     background-color: var(--ph-color-background-notice-error);
   }
 
@@ -387,4 +388,8 @@ html.ph body {
   .ph .vp-doc .vp-code-block-title-bar {
     margin: 16px 0 0;
   }
+}
+
+.ph .vp-code-group {
+  margin-top: 1rem;
 }
